--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>titulo do site</title>
+    <link rel="stylesheet" href="estils/style.css">
 </head>
 <body>
    <main>
@@ -12,8 +13,7 @@
            <h1>titulo do site</h1>
        </header>
        <article>
-           <h2>artigo 001 - cristiano
-           </h2>
+           <h2>artigo 001 </h2>
        </article
        <article>
            <h2>artigo 002</h2>
@@ -22,3 +22,4 @@
    </main> 
 </body>
 </html>
+
