--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <p>lincantropia(a evolução da besta)</p>
-    <h1>Licantropia clínica é uma rara síndrome psiquiátrica na qual a pessoa afetada sofre a ilusão de poder se transformar, ou de fato ter se transformado, em um animal, ou que tal pessoa é, de alguma forma, um animal.[1] A palavra é derivada da condição mitológica da Licantropia, uma aflição sobrenatural na qual as pessoas se transformam fisicamente em lobisomens. A palavra zooantropia é algumas vezes usada para a ilusão de que uma pessoa se transformou em um animal qualquer, e não especificamente em um lobo.</h1>
+    <p>Lincantropia(A Evolução da Besta)</p>
+    <h1>Licantropia clínica é uma rara síndrome psiquiátrica na qual a pessoa afetada sofre a ilusão de poder se transformar, ou de fato ter se transformado, em um animal, ou que tal pessoa é, de alguma forma, um animal.[1] A palavra é derivada da condição mitológica da Licantropia, uma aflição sobrenatural na qual as pessoas se transformam fisicamente em **lobisomens**. A palavra zooantropia é algumas vezes usada para a ilusão de que uma pessoa se transformou em um animal qualquer, e não especificamente em um lobo.</h1>
 
     í<ndice>esconder</ndice>
    <ol>
