--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>lincantropia(A Evolução da Besta)</h1>
+    <h1>Lincantropia(A Evolução da Besta)</h1>
     <p>Licantropia clínica é uma rara síndrome psiquiátrica na qual a pessoa afetada sofre a ilusão de poder se transformar, ou de fato ter se transformado, em um animal, ou que tal pessoa é, de alguma forma, um animal.[1] A palavra é derivada da condição mitológica da Licantropia, uma aflição sobrenatural na qual as pessoas se transformam fisicamente em <b>Lobisomem</b> .A palavra zooantropia é algumas vezes usada para a ilusão de que uma pessoa se transformou em um animal qualquer, e não especificamente em um lobo.</p>
 
     í<ndice>esconder</ndice>
