--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     í<ndice>esconder</ndice>
    <ol>
-       <li>sintomas</li>
+       <li><a href="">sintomas</a></li>
        <li>mecanismo proposto</li>
        <li>ver também</li>
        <li>referências</li>
